Fixes a bug where recurring events that had no time associated with them weren't synced correctly.

BUG: 183631

svn path=/branches/KDE/4.2/kdepim/; revision=931909